<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_eventos" />
        <item
            android:id="@+id/nav_reservar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reservar" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_cerrar"
            android:icon="@drawable/com_facebook_close"
            android:title="@string/cerrar_sesion">

        </item>
    </group>



</menu>
