<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.login.fragments.Inicio"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_reservar"
        android:name="com.example.login.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_reservar"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.login.ui.tools.ToolsFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_eventos"
        android:name="com.example.login.ui.tools.ToolsFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_tools"/>

    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.example.login.fragments.Mapa"
        android:label="@string/menu_mapa"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/nav_cerrar"
        android:name="com.example.login.fragments.CerrarSesion"
        android:label="@string/cerrar_sesion"
        tools:layout="@layout/fragment_cerrar_sesion" />

</navigation>